crates/escalier_parser/src/snapshots/escalier_parser__type_ann_parser__tests__parse_object_types-2.snap
---
source: crates/escalier_parser/src/type_ann_parser.rs
expression: "parse(\"{a: {b: {c: boolean}}}\")"
---
TypeAnn {
    kind: Object(
        [
            Prop(
                Prop {
                    span: 0..0,
                    name: "a",
                    optional: false,
                    mutable: false,
                    type_ann: TypeAnn {
                        kind: Object(
                            [
                                Prop(
                                    Prop {
                                        span: 0..0,
                                        name: "b",
                                        optional: false,
                                        mutable: false,
                                        type_ann: TypeAnn {
                                            kind: Object(
                                                [
                                                    Prop(
                                                        Prop {
                                                            span: 0..0,
                                                            name: "c",
                                                            optional: false,
                                                            mutable: false,
                                                            type_ann: TypeAnn {
                                                                kind: Boolean,
                                                                span: 12..19,
                                                                inferred_type: None,
                                                            },
                                                        },
                                                    ),
                                                ],
                                            ),
                                            span: 7..20,
                                            inferred_type: None,
                                        },
                                    },
                                ),
                            ],
                        ),
                        span: 3..21,
                        inferred_type: None,
                    },
                },
            ),
        ],
    ),
    span: 0..22,
    inferred_type: None,
}
