crates/escalier_parser/src/snapshots/escalier_parser__type_ann_parser__tests__parse_object_types.snap
---
source: crates/escalier_parser/src/type_ann_parser.rs
expression: "parse(\"{a: number, b?: string, c: boolean}\")"
---
TypeAnn {
    kind: Object(
        [
            Prop(
                Prop {
                    span: 0..0,
                    name: "a",
                    modifier: None,
                    optional: false,
                    mutable: false,
                    type_ann: TypeAnn {
                        kind: Number,
                        span: 4..10,
                        inferred_type: None,
                    },
                },
            ),
            Prop(
                Prop {
                    span: 0..0,
                    name: "b",
                    modifier: None,
                    optional: true,
                    mutable: false,
                    type_ann: TypeAnn {
                        kind: String,
                        span: 16..22,
                        inferred_type: None,
                    },
                },
            ),
            Prop(
                Prop {
                    span: 0..0,
                    name: "c",
                    modifier: None,
                    optional: false,
                    mutable: false,
                    type_ann: TypeAnn {
                        kind: Boolean,
                        span: 27..34,
                        inferred_type: None,
                    },
                },
            ),
        ],
    ),
    span: 0..35,
    inferred_type: None,
}
