crates/escalier_parser/src/snapshots/escalier_parser__type_ann_parser__tests__parse_primitive_types-2.snap
---
source: crates/escalier_parser/src/type_ann_parser.rs
expression: "parse(\"string\")"
---
TypeAnn {
    kind: String,
    span: 0..6,
}
