crates/escalier_parser/src/snapshots/escalier_parser__type_ann_parser__tests__parse_primitive_types-3.snap
---
source: crates/escalier_parser/src/type_ann_parser.rs
expression: "parse(\"boolean\")"
---
TypeAnn {
    kind: Boolean,
    span: 0..7,
}
