crates/escalier_parser/src/snapshots/escalier_parser__type_ann_parser__tests__parse_primitive_types-4.snap
---
source: crates/escalier_parser/src/type_ann_parser.rs
expression: "parse(\"symbol\")"
---
TypeAnn {
    kind: Symbol,
    span: 0..6,
}
