crates/escalier_parser/src/snapshots/escalier_parser__type_ann_parser__tests__parse_tuple_types-2.snap
---
source: crates/escalier_parser/src/type_ann_parser.rs
expression: "parse(\"[\\n  number,\\n  string,\\n  boolean,\\n]\")"
---
TypeAnn {
    kind: Tuple(
        [
            TypeAnn {
                kind: Number,
                span: 4..10,
            },
            TypeAnn {
                kind: String,
                span: 14..20,
            },
            TypeAnn {
                kind: Boolean,
                span: 24..31,
            },
        ],
    ),
    span: 0..34,
}
