crates/escalier_parser/src/snapshots/escalier_parser__type_ann_parser__tests__parse_tuple_types.snap
---
source: crates/escalier_parser/src/type_ann_parser.rs
expression: "parse(\"[number, string, boolean]\")"
---
TypeAnn {
    kind: Tuple(
        [
            TypeAnn {
                kind: Number,
                span: 1..7,
                inferred_type: None,
            },
            TypeAnn {
                kind: String,
                span: 9..15,
                inferred_type: None,
            },
            TypeAnn {
                kind: Boolean,
                span: 17..24,
                inferred_type: None,
            },
        ],
    ),
    span: 0..25,
    inferred_type: None,
}
