crates/escalier_parser/src/snapshots/escalier_parser__type_ann_parser__tests__parse_type_refs-3.snap
---
source: crates/escalier_parser/src/type_ann_parser.rs
expression: "parse(\"Array<Array<T>>\")"
---
TypeAnn {
    kind: TypeRef(
        "Array",
        Some(
            [
                TypeAnn {
                    kind: TypeRef(
                        "Array",
                        Some(
                            [
                                TypeAnn {
                                    kind: TypeRef(
                                        "T",
                                        None,
                                    ),
                                    span: 12..13,
                                },
                            ],
                        ),
                    ),
                    span: 6..14,
                },
            ],
        ),
    ),
    span: 0..15,
}
