crates/escalier_parser/src/snapshots/escalier_parser__type_ann_parser__tests__parse_type_refs-4.snap
---
source: crates/escalier_parser/src/type_ann_parser.rs
expression: "parse(\"T\")"
---
TypeAnn {
    kind: TypeRef(
        "T",
        None,
    ),
    span: 0..1,
}
